# Aspex

./: .gitignore  CONTEXT.md  CONTRIBUTING.md  NOTICE  README.md  biome.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml
apps/desktop/: package.json
apps/hub/: package.json
apps/web/: index.html  package.json  vite.config.ts
docs/: HANDOFF.md  adapter-authoring.md  event-schema.md  free-form-intent.md  licenses.md  preview-deck.md  threat-model.md  voice-grammar.md
docs/adr/: 0001-world-model-is-upserted-items-not-events.md  0002-attention-partitioned-by-lifecycle-stage.md  0003-two-track-liveness-poll-health-vs-heartbeats.md  0004-phase0-claude-code-is-read-only.md  0005-phase0-hub-is-a-single-process-sse-rest-sqlite.md  0006-github-discovery-is-viewer-centric-search.md  0007-tauri-desktop-shell-is-in-phase-0.md  0008-hub-tauri-integration-dev-separate-release-bun-sidecar.md  0009-phase1-is-flat-voice-only-webxr-mic-gate-split-out.md  0010-voice-loop-is-hub-brokered-stt-tts-are-services-not-adapters.md  0011-phase1-voice-grammar-is-closed-vocabulary-mapped-to-existing-actions.md  0012-free-text-dictation-is-in-phase1-via-two-step-dictation-mode.md  0013-stt-tts-reached-via-generic-http-contract-with-ordered-fallback.md  0014-preview-deck-boots-declared-specs-never-computes.md  0015-a-preview-is-ephemeral-not-an-item.md  0016-v1-shows-trusted-previews-in-a-sandboxed-iframe-pixels-lane-deferred.md  (+6 more)
docs/reviews/: phase-0.md  phase-1.md  (+1 more)
services/voice-server/: README.md  pyproject.toml  server.py  stt_parakeet.py  test_contract.py  tts_piper.py
(+98 files in other folders)
