[project]
name = "aspex-voice-server"
version = "0.1.0"
description = "Reference FastAPI Parakeet STT and Piper TTS server for Aspex"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "uvicorn[standard]>=0.30,<1",
  "python-multipart>=0.0.9,<1",
]

[project.optional-dependencies]
test = [
  "httpx>=0.27,<1",
  "pytest>=8,<9",
]

[tool.pytest.ini_options]
testpaths = ["test_contract.py"]
